# pixelflow

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  check_tests.py  clean_cocoa.py  clean_cocoa_safe.py  clippy.sh  clippy_fix.py  clippy_fix.sh  clippy_fix_undo.py  clippy_fix_unused.py  debug_float  debug_float.rs  delete_empty_tests.py  delete_flaky.py  edit1.py  edit10.py  edit2.py  edit3.py  edit4.py  edit5.py  edit6.py  edit7.py  edit8.py  edit9.py  evaluate_test.py  find_empty_tests.py  fix8.py  fix_assertions_final.py  fix_asserts.py  fix_binary.py  fix_binary_again.py  fix_boolean_trap.py  fix_booleans.py  fix_box_again.py  fix_clippy.py  (+81 more)
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: rust.yaml
.jules/: bolt.md
actor-scheduler-macros/src/: lib.rs
actor-scheduler/benches/: bench_adversarial.rs  bench_latency.rs  bench_optimize.rs  bench_optimize_spsc.rs  bench_spsc_vs_mpsc.rs
actor-scheduler/src/: kubelet.rs  lib.rs  lifecycle.rs  params.rs  registry.rs  service.rs  sharded.rs  spsc.rs
actor-scheduler/tests/: stress_tests.rs
core-term/: build.rs
core-term/benches/: ansi_parser.rs  keybinding_benchmark.rs
core-term/src/: keys.rs  lib.rs  main.rs  messages.rs  terminal_app.rs
core-term/tests/: actor_roundtrip_tests.rs  ansi_parser_message_tests.rs  ansi_to_grid_integration.rs  message_cuj_tests.rs
docs/: EGRAPH_OPTIMIZATION_ARCHITECTURE.md  NNUE_INTEGRATION_STATUS.md  NNUE_TRAINING_RECIPE.md  function-audit.tsv  function-coordinates.tsv  function-namespace-audit.md
docs/bugs/: 2026-07-15-pty-fork-malloc-deadlock.md  2026-07-20-test-quality-audit.md  (+4 more)
mutants.out/: lock.json  mutants.json  outcomes.json
mutants.out.old/: lock.json
pixelflow-compiler/: Cargo.toml
pixelflow-compiler/benches/: macro_bench.rs
pixelflow-compiler/src/: annotate.rs  ast.rs  cost_builder.rs  element.rs  fold.rs  ir_bridge.rs  jit_backend.rs  lexer.rs  lib.rs  manifold_expr.rs  optimize.rs  parser.rs  sema.rs  symbol.rs
pixelflow-compiler/src/codegen/: binding.rs  emitter.rs  leveled.rs  mod.rs  struct_emitter.rs  util.rs
pixelflow-compiler/tests/: dwrt_jet2_parity.rs  jit_parity.rs  kernel_composition.rs  kernel_jit.rs  kernel_routing_parity.rs  optimizer_type_stability.rs
pixelflow-graphics/: Cargo.toml
pixelflow-graphics/benches/: font_rendering.rs  kernel_bench.rs
pixelflow-graphics/examples/: chrome_asm.rs  circle_asm.rs  compose_test.rs  font_demo.rs  kernel_scale_test.rs
pixelflow-graphics/src/: baked.rs  image.rs  lib.rs  mesh.rs  patch.rs  scene3d.rs  shapes.rs  spatial_bsp.rs  subdivision.rs  transform.rs
pixelflow-graphics/src/fonts/: cache.rs  loader.rs  mod.rs  text.rs  ttf.rs  ttf_curve_analytical.rs
pixelflow-graphics/src/render/: aa.rs  bilinear.rs  color.rs  frame.rs  mod.rs  pict.rs  pict_color_tests.rs
pixelflow-graphics/src/render/rasterizer/: actor.rs  messages.rs  mod.rs
pixelflow-graphics/src/subdiv/: mod.rs
pixelflow-graphics/tests/: e2e_render_to_file.rs  font_antialiasing.rs  font_orientation_test.rs  font_rasterization_regression.rs  kernel_glyph_bake.rs  kernel_glyph_golden.rs  kernel_macro.rs  leaf_lowering.rs  optimization_fuzz.proptest-regressions  optimization_fuzz.rs  pixel_contract.rs  raster_parallel.rs  rasterizer_parallel_test.rs  raymarch_sphere.rs  render_glyph.rs  scene3d_test.rs
pixelflow-ir/: Cargo.toml
pixelflow-ir/examples/: jit_timing.rs
pixelflow-ir/src/: arena.rs  binding.rs  eval.rs  expr.rs  jit_cache.rs  jit_manifold.rs  kernel.rs  kind.rs  lib.rs  lower.rs  ops.rs  traits.rs  variance.rs
pixelflow-ir/src/backend/: arm.rs  compounds.rs  mod.rs  primitives.rs  wasm.rs  x86.rs
pixelflow-ir/src/backend/emit/: aarch64.rs  avx512.rs  executable.rs  lowering.rs  mod.rs  patch.rs  regalloc.rs  x86_64.rs
pixelflow-ir/tests/: avx512_evex_proof.rs  lower_dwrt.rs  spill_pressure.rs
pixelflow-pipeline/: Cargo.toml
pixelflow-pipeline/benches/: nnue_training_suite.rs
pixelflow-pipeline/data/: best_unified_params.json  critic_gacc_1k.pt
pixelflow-pipeline/examples/: critical_path_test.rs  egraph_choices.rs  ilp_benchmark.rs  op_cost_stress.rs
pixelflow-pipeline/scripts/: critic.py  critic_server.py  launch_online.py  optuna_unified.py
pixelflow-pipeline/src/: fusion.rs  jit_bench.rs  lib.rs  main.rs
pixelflow-pipeline/src/training/: corpus.rs  data_gen.rs  episodes.rs  factored.rs  gen_es.rs  mod.rs  replay.rs  self_play.rs  unified.rs  unified_backward.rs
pixelflow-pipeline/tests/: bwdgen_quality.rs  judge_weights_load.rs
pixelflow-runtime/: Cargo.toml
pixelflow-runtime/examples/: animated_sphere.rs  bench_psychedelic.rs  chrome_sphere.rs  image_viewer.rs  psychedelic_shader.rs
pixelflow-runtime/src/: engine_troupe.rs  frame.rs  lib.rs  vsync_actor.rs  vsync_actor_test.rs
pixelflow-runtime/src/display/: messages.rs
pixelflow-runtime/src/platform/: waker.rs
pixelflow-runtime/src/platform/linux/: events.rs  platform.rs
pixelflow-runtime/src/platform/macos/: cocoa.rs  platform.rs  sys.rs  window.rs
pixelflow-runtime/src/testing/: mock_engine.rs  mod.rs
pixelflow-runtime/tests/: actor_bug_hunting_tests.rs  actor_model_tests.rs  display_driver_tests.rs  jit_render.rs  macos_integration_tests.rs  platform_actor_tests.rs  troupe_pattern_tests.rs  vsync_actor_bug_hunting_tests.rs  vsync_actor_tests.rs
pixelflow-search/: Cargo.toml  README.md
pixelflow-search/examples/: rule_report.rs
pixelflow-search/src/domain/: algebra.rs
pixelflow-search/src/egraph/: best_first.rs  codegen.rs  cost.rs  deps.rs  derivative.rs  extract.rs  graph.rs  guided.rs  guided_search.rs  labeler.rs  mod.rs  nnue_adapter.rs  nnue_optimize.rs  node.rs  ops.rs  provenance.rs  rewrite.rs  saturate.rs
pixelflow-search/src/math/: algebra.rs  exp.rs  fusion.rs  mod.rs  parity.rs  pict_rewrite_tests.rs  power.rs  trig.rs
pixelflow-search/src/nnue/: factored.rs  mod.rs  training.rs  window.rs
pixelflow-search/tests/: prod_kernel_jit.rs
scripts/: function_audit.py  function_coordinates.py  scrape_shadertoy.py
xtask/: Cargo.toml
(+126 files in other folders)
