[package]
name = "pixelflow-ir"
version = "0.1.0"
description = "Unified Intermediate Representation and SIMD Backends for PixelFlow"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
libm = "0.2.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["std"]
std = []
