[package]
name = "pixelflow-pipeline"
version = "0.1.0"
edition = "2024"
description = "Training and data generation pipeline for PixelFlow"

[features]
default = []
training = ["pixelflow-search/std"]
profiling = ["pprof"]

[dependencies]
pixelflow-ir = { path = "../pixelflow-ir" }
pixelflow-search = { path = "../pixelflow-search", features = ["std"] }
pixelflow-core = { path = "../pixelflow-core" }
pixelflow-compiler = { path = "../pixelflow-compiler" }
libm = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
libc = "0.2.183"
pprof = { version = "0.15", features = ["flamegraph"], optional = true }

[dev-dependencies]
criterion = "0.5"
pixelflow-compiler = { path = "../pixelflow-compiler" }

[[bench]]
name = "nnue_training_suite"
harness = false


[[bin]]
name = "bench_jit_corpus"
path = "src/bin/bench_jit_corpus.rs"
required-features = ["training"]

[[bin]]
name = "bootstrap_extraction_head"
path = "src/bin/bootstrap_extraction_head.rs"
required-features = ["training"]

[[bin]]
name = "gen_bench_corpus"
path = "src/bin/gen_bench_corpus.rs"
required-features = ["training"]

[[bin]]
name = "bench_jit_profile"
path = "src/bin/bench_jit_profile.rs"
required-features = ["training"]

[[bin]]
name = "validate_corpus"
path = "src/bin/validate_corpus.rs"
required-features = ["training"]

[[bin]]
name = "bench_scanline_jit"
path = "src/bin/bench_scanline_jit.rs"
required-features = ["training"]

[[bin]]
name = "bench_extraction_3way"
path = "src/bin/bench_extraction_3way.rs"
required-features = ["training"]
