[package]
name = "pixelflow-runtime"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
bench = false

[dependencies]
# Core dependencies
log = "0.4"
bitflags = { version = "2.9", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }

# Workspace dependencies
pixelflow-core = { path = "../pixelflow-core" }
pixelflow-ir = { path = "../pixelflow-ir" }
pixelflow-graphics = { path = "../pixelflow-graphics", features = ["serde"] }

[dependencies.actor-scheduler]
path = "../actor-scheduler"

# Display driver dependencies - feature-gated for flexibility

[dependencies.x11]
version = "2.21"
optional = true

# Platform-specific dependencies for auto-detection when no feature is specified
# These ensure the right display driver compiles on each platform by default
[target.'cfg(target_os = "macos")'.dependencies]
# Removed objc2 dependencies. Using manual bindings.
# core-foundation = "0.9" # Not used directly?
# core-graphics = "0.24" # Not used directly?

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
bincode = "1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "ImageData",
    "Window",
    "Worker",
    "console",
    "Performance",
]

[build-dependencies]
pkg-config = "0.3"


[features]
display_cocoa = []
display_x11 = [
    "x11",
]
display_headless = []
display_web = []

# No default - let the consuming crate pick based on platform
default = []

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.11"
pixelflow-compiler = { path = "../pixelflow-compiler" }
