[package]
name = "pixelflow-search"
version = "0.1.0"
edition = "2024"
description = "A generic graph search framework for algebraic optimization and scheduling"

[dependencies]
libm = "0.2.15"
rand = "0.8"
pixelflow-ir = { path = "../pixelflow-ir", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
std = ["rand/std", "dep:serde", "dep:serde_json"]
default = ["std"]
